# Automata

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
automata/: __init__.py  automata.py  testing.py
automata/utils/: __init__.py  errors.py  payloads.py
controllers/: controller.py
example/: __init__.py  example.py
example/states/: __init__.py  logged_in.py  logged_out.py
test/: test_invalid_automata_setup.py  test_invalid_runtime.py  test_valid_automata_setup.py  test_valid_runtime.py
